myproject/temp/objects/PEvent__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Pevents</relationshipLabel>
        <relationshipName>Pevents</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PEvent</label>
    <nameField>
        <label>PEvent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pevents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>end</fullName>
        <active>true</active>
        <errorConditionFormula>Date__c &gt; Project__r.End_Date__c</errorConditionFormula>
        <errorMessage>Date must be within project&apos;s duration</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>start</fullName>
        <active>true</active>
        <errorConditionFormula>Date__c &lt;  Project__r.Start_Date__c</errorConditionFormula>
        <errorMessage>Date must be within project&apos;s duration</errorMessage>
    </validationRules>
</CustomObject>